--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,33 +1,30 @@
-name: Create Artifact
-
-on:
-  push:
-    branches:
-      - main
-
+name: Publish Python Package to github packages
+on: push   
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions: 
+      contents: read
+      packages: write 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        
-    
-    # Add steps to run tests or build here
-    
-    - name: Create artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: my-artifact
-        path: test.zip
-        
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: set up python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+
+      - name: Install dependencies
+        run: |
+          pip install setuptools wheel twine
+
+      - name: Build and Publish
+        run: python setup.py sdist bdist_wheel
+
+      - name: publish Package
+        run: |
+          twine upload --verbose --repository-url https://pypi.pkg.github.com/maup007/test-python dist/*
+        env:
+          TWINE_USERNAME: maup007
+          TWINE_PASSWORD: ${{secrets.JAVA_TOKEN}}
